kubernetes/ingress-lessons/nginx-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-dpl
spec:
  selector:
    matchLabels:
      app: my-nginx-app
  template:
    metadata:
      labels:
        app: my-nginx-app
    spec:
      containers:
      - name: myapp-container
        image: nginx:alpine
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
