kubernetes/ingress-lessons/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-svc
spec:
  type: ClusterIP
  selector:
    app: my-nginx-app
  ports:
    - port: 80
      targetPort: 80
